k8s/front/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-deployment-green
  namespace: fourweekdays-front
spec:
  replicas: 2
  selector:
    matchLabels:
      type: app
      ver: green
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        type: app
        ver: green
    spec:
      containers:
        - name: container
          image: tipsyboy/frontend:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 5
            successThreshold: 2
            failureThreshold: 3
      terminationGracePeriodSeconds: 10
