k8s/front/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: fourweekdays-front
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    type: app
    ver: green
  sessionAffinity: None
