k8s/front/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  namespace: fourweekdays-front
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.fourweeeek.kro.kr
      secretName: zerossl-cert
  rules:
    - host: www.fourweeeek.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
